# nova-test

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  creds.json  docker-compose.yml  env.example  pyproject.toml
api/: admin.py  models.py  serializers.py  service.py  urls.py  utils.py  views.py
api/migrations/: 0001_initial.py  0002_alter_uploadfile_id.py
backend/: settings.py  urls.py
gd_service/: gd_api.py
